release 1.9
- Fixed issue 686
  http://java.net/jira/browse/JERSEY-686
  Clarified WebAppDescriptor's contextPath and servletPath
- Jackson dependency upgrade: 1.7.1 -> 1.8.3
- Fixed issue 745
  http://java.net/jira/browse/JERSEY-745
  @FormDataParam parameters were ignored in generated wadl
- Suport for Generating XML Schema from JAX-B classes
  Added wadl decorator WadlGeneratorJAXBGrammarGenerator that looks at attached JAX-B classes and automatically
  generates schemas for them.
- Fixed issue 737
  http://java.net/jira/browse/JERSEY-737
  javadoc typo
- *Breaking change*
   Updating wadl namespace from "http://research.sun.com/wadl/2006/10" to
    "http://wadl.dev.java.net/2009/02". WADL format changed slightly too, see
    http://wadl.java.net/wadl20090202.xsd
    

release 1.8 (06-2011)
- Fixed GlassFish issue 16199
  http://java.net/jira/browse/GLASSFISH-16199
  IllegalArgumentException: object is not an instance of declaring class - on a REST / EJB Service
- Breaking change in client API - removed RequestWriter.headerValueToString().
  Also changed constructors of AsyncWebResource and AsyncViewResource to
  protected (from package private and private).
- Fixed issue 726
  JSON POJO mapping feature does not allow to register custom object mappers for different types
- jersey-grizzly2: Grizzly update 2.1 -> 2.1.1, Servlet 3.0 -> 3.1
- Fixed issue 724
  http://java.net/jira/browse/JERSEY-724
  Sample code in Guice documentation does not compile.

release 1.7 (05-2011)
- Added methods to WadlApplicationContext which can control WADL generation in runtime.
  See WadlResourceTest.testEnableDisableRuntime() for further details.
- Fixed bug related to init param propagation when Application class name is specified in
  servlet-name element and servlet-class is not used at all (see sample 2.11 from user guide).
- Fixed issue 697
  http://java.net/jira/browse/JERSEY-697
  Scope of the dependency on Jersey Grizzly2 module in Jersey Guice module updated to "test".