@@ -1,4 +1,7 @@
 release 1.9
+- Fixed issue 753
+  http://java.net/jira/browse/JERSEY-753
+  Removed a hard dependency on JAXB RI introduced when implementing support for XmlHeader annotation in Jersey 1.6.
 - Fixed issue 686
   http://java.net/jira/browse/JERSEY-686
   Clarified WebAppDescriptor's contextPath and servletPath
